--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         />
       </div>
       <div>
-        <h2 class="introText">Hi,I am a mobile developer</h2>
+        <h2 class="introText">Hi,I am a full stack dedveloper</h2>
         <p>
           I am a mobile developer. I can provide clean code and pixel perfect
           design. I also make website more & more interactive with web
