--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
               <a href="">03.RESUME</a>
             </li>
             <li>
+              <a href="">04. BLOG</a>
+            </li>
+            <li>
               <a href="">06. CONTACT</a>
             </li>
           </ul>
