--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         />
       </div>
       <div>
-        <h2 class="introText">Hi,I am a full stack dedveloper</h2>
+        <h2 class="introText">Hi,I am a mobile  developer</h2>
         <p>
           I am a mobile developer. I can provide clean code and pixel perfect
-          design. I also make website more & more interactive with web
+          design. I also make websites more & more interactive with web
           animations.
         </p>
       </div>
